--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
    			<h5>Portfolio</h5>
    			<h1>Current projects</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Projects that I have been a part of or built personally.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -348,13 +348,13 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="Liberty">
+	               	<img src="images/portfolio/liberty.jpg" alt="ProjectJIM">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-		     					       <h3 class="folio-title">Liberty</h3>	     					    
+		     					       <h3 class="folio-title">ProjectJIM</h3>	     					    
 		     					    	 <span class="folio-types">
-		     					       	  Graphic Design
+		     					       	  ios application
 		     					       </span>
 		     					   </div>	                      	
 	                     </div>                    
@@ -364,11 +364,11 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.jpg" alt="Shutterbug">
+	               	<img src="images/portfolio/shutterbug.jpg" alt="JobHunter">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Shutterbug</h3>	     					    
+	                     		<h3 class="folio-title">JobHunter</h3>	     					    
 		     					    	<span class="folio-types">
 		     					       	  Web Design
 		     					      </span>		     		
@@ -380,13 +380,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/portfolio/clouds.jpg"alt="AudioAmplifier">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Clouds</h3>	     					    
+	                     		<h3 class="folio-title">Audio Amplifier</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  Circuits
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -451,14 +451,17 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>ProjectJIM</h4>		      
+					      <p>ProjectJIM is an iOS application designed by myself and two other Computer Engineers.
+                            The app is being designed to assist gym-goers with creating a weightlifting workout plan based on their interests and 
+                            also act as a repetition counter. The application also takes user feedback in order to scale the workout difficulty accordingly.
+                          </p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">IOS Application</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/SaintMcMuffins/JIM">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
