comment out folio itms

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 	               </div>
 	        		</div> <!-- /folio-item -->
 
-	            <div class="bgrid folio-item">
+	            <!-- <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/beetle.jpg" alt="Beetle">
 	                  <a href="#modal-04" class="overlay">                  	                 
@@ -408,9 +408,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->     
+	        		</div> !-- /folio-item -->     
 
-	        		<div class="bgrid folio-item">
+	        	<!--	<div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/lighthouse.jpg" alt="Lighthouse">
 	                  <a href="#modal-05" class="overlay">             		                  
@@ -424,9 +424,9 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->
+	        		</div> !-- /folio-item -->
 
-	            <div class="bgrid folio-item">
+	           <!-- <div class="bgrid folio-item">
 	               <div class="item-wrap">
 	               	<img src="images/portfolio/salad.jpg" alt="Salad">
 	                  <a href="#modal-06" class="overlay">
@@ -440,7 +440,7 @@
 	                     </div>                    
 	                  </a>
 	               </div>
-	        		</div> <!-- /folio-item -->   
+	        		</div> !-- /folio-item -->   
 
 	            <!-- modal popups - begin
 	            ============================================================= -->
@@ -474,14 +474,16 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>JobHunter</h4>		      
+					      <p>JobHunter is a web-app designed for a class project. It allows the user to search for jobs in specific tech fields.
+                            Companies are also able to create accounts in order to post jobs. The project was mostly centered around implementing a search/filter function.
+                          </p>
 
 					      <div class="categories">Web Design</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -494,8 +496,9 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Audio Amplifier</h4>		      
+					      <p>Utilized EAGLE software to construct digital framework for the circuit board and mapping the electrical currents. I applied my knowledge of electrical components and soldering to assemble final board. The board amplified sound from an input to an output device such as a headset.
+                            </p>
 
 					      <div class="categories">Web Design</div>			               
 					   </div>
