--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
+   				<img src="images/profilepic.jpg" alt="Profile Picture">
 
    				<p class="lead">Hi! I'm Julian, an upcoming Computer Engineering graduate from San Francisco. I enjoy playing video games, and watching anime or k-dramas in my free time. 
                     I grew up surrounded by all kinds of technology and knew right away I wanted to pursue something in the technology field.
@@ -123,11 +123,11 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>I enjoy exploring new places and finding good restaurants to eat at.</p>
 
    			<ul class="info-list">
    				<li>
-   					<strong>Fullname:</strong>
+   					<strong>Full name:</strong>
    					<span>Julian Manaois</span>
    				</li>
    				<li>
@@ -150,7 +150,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>These are the coding languages and frameworks that I am familiar with.</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -163,16 +163,20 @@
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<strong>JavaScript</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<strong>SQL</strong>
 				   </li>
 				   <li>
 
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<strong>Java</strong>
+				   </li>
+                   <li>
+                   <div class="progress percent50"><span>50%</span></div>
+				   	<strong>Swift</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
