update profile picture

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">JULIAN MANAOIS</a>
+		         <a href="index.html">Julian Manaois</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -106,8 +106,6 @@
    			<h1>who i am</h1>
 
    			<div class="intro-info">
-
-   				<img src="images/profilepic.jpg" alt="Profile Picture">
 
    				<p class="lead">Hi! I'm Julian, an upcoming Computer Engineering graduate from San Francisco. I enjoy playing video games, and watching anime or k-dramas in my free time. 
                     I grew up surrounded by all kinds of technology and knew right away I wanted to pursue something in the technology field.
