--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://github.com/jmanaois/jobhunter">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
