--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="AudioAmplifier">
+	               	<img src="images/portfolio/clouds.jpg"alt="AnyaBot">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Audio Amplifier</h3>	     					    
+	                     		<h3 class="folio-title">AnyaBot</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Circuits
+		     					       	  bot application
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -498,11 +498,11 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Audio Amplifier</h4>		      
-					      <p>Utilized EAGLE software to construct digital framework for the circuit board and mapping the electrical currents. I applied my knowledge of electrical components and soldering to assemble final board. The board amplified sound from an input to an output device such as a headset.
+					      <h4>AnyaBot</h4>		      
+					      <p>Utilized Discord API and JavaScript to code a Discord Bot that keeps track of reminders and tasks for users. The bot's name comes from the main character, Anya, in the anime Spy x Family!
                             </p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">Bot application</div>			               
 					   </div>
 
 			         <div class="link-box">
