add working resume link

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Contact Me" class="button stroke smoothscroll">contact me</a>
-   			<a href="#" title="Download CV" class="button button-primary">download CV</a>
+   			<a href="JulianManaois_Resume.pdf" target="_blank" title="Download Resume" class="button button-primary">download resume</a>
    		</div>   		
    	</div>
 
