add relevant coursework

--- a/index.html
+++ b/index.html
@@ -153,24 +153,24 @@
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<strong>HTML5/CSS3</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
 				   	<strong>JavaScript</strong>
 				   </li>
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
+				   	<div class="progress percent70"><span>70%</span></div>
 				   	<strong>SQL</strong>
+				   </li>
+				   <li>
+				   	<div class="progress percent95"><span>95%</span></div>
+				   	<strong>Java</strong>
 				   </li>
 				   <li>
 
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Java</strong>
+				   	<strong>Adobe Cloud</strong>
 				   </li>
                    <li>
                    <div class="progress percent50"><span>50%</span></div>
@@ -310,6 +310,7 @@
 	   				<div class="timeline-content">
 	   					<h4>San Francisco State University</h4>
 	   					<p>BS in Computer Engineering</p>
+						<p>Relevant Coursework: Software Development, Data Structures, Discrete Mathematical Structures, Programming Methodology, Computer Systems, Internet Application Design & Development. </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
