update blog pgs

--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/SaintMcMuffins/JIM">Details</a>
+			            <a href="projectjim.html">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -486,7 +486,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="https://github.com/jmanaois/jobhunter">Details</a>
+			            <a href="jobhunter.html">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -495,7 +495,7 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-clouds.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-anya.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -507,7 +507,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="anyabot.html">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
