--- a/projectjim.html
+++ b/projectjim.html
@@ -63,11 +63,11 @@
                     <ul class="s-header__nav">
                         <li><a href="index.html" title="">Home</a></li>
                         <li class="current-menu-item has-children">
-                            <a href="#0" title="" class="">Blog</a>
+                            <a href="#0" title="" class="">Projects</a>
                             <ul class="sub-menu">
                                 <li><a href="projectjim.html">ProjectJIM</a></li>
                                 <li><a href="jobhunter.html">JobHunter</a></li>
-                                <li><a href="newproject.html">New Project</a></li>
+                                <li><a href="anyabot.html">AnyaBot</a></li>
                             </ul>
                         </li>
                     </ul> <!-- end s-header__nav -->
