--- a/jobhunter.html
+++ b/jobhunter.html
@@ -60,32 +60,16 @@
 
                 <nav class="s-header__nav-wrap">
     
-                    <h3 class="s-header__nav-heading">Navigate to</h3>
-    
                     <ul class="s-header__nav">
                         <li><a href="index.html" title="">Home</a></li>
-                        <li class="has-children">
-                            <a href="#0" title="" class="">Categories</a>
-                            <ul class="sub-menu">
-                                <li><a href="category.html">Design</a></li>
-                                <li><a href="category.html">Lifestyle</a></li>
-                                <li><a href="category.html">Inspiration</a></li>
-                                <li><a href="category.html">Work</a></li>
-                                <li><a href="category.html">Health</a></li>
-                                <li><a href="category.html">Photography</a></li>
-                            </ul>
-                        </li>
                         <li class="current-menu-item has-children">
-                            <a href="#0" title="" class="">Blog</a>
+                            <a href="#0" title="" class="">Projects</a>
                             <ul class="sub-menu">
-                                <li><a href="single-standard.html">Standard Post</a></li>
-                                <li><a href="single-video.html">Video Post</a></li>
-                                <li><a href="single-audio.html">Audio Post</a></li>
+                                <li><a href="projectjim.html">ProjectJIM</a></li>
+                                <li><a href="jobhunter.html">JobHunter</a></li>
+                                <li><a href="anyabot.html">AnyaBot</a></li>
                             </ul>
                         </li>
-                        <li><a href="styles.html" title="">Styles</a></li>
-                        <li><a href="about.html" title="">About</a></li>
-                        <li><a href="contact.html" title="">Contact</a></li>
                     </ul> <!-- end s-header__nav -->
 
                 </nav> <!-- end s-header__nav-wrap -->
