--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
 	         	<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/liberty.jpg" alt="ProjectJIM">
+	               	<img src="images/portfolio/projectjim.jpg" alt="ProjectJIM">
 	                  <a href="#modal-01" class="overlay">	                  	           
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -367,7 +367,7 @@
 
 	        		<div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/shutterbug.jpg" alt="JobHunter">
+	               	<img src="images/portfolio/jobhunter.png" alt="JobHunter">
 	               	<a href="#modal-02" class="overlay">              		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -383,7 +383,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="AnyaBot">
+	               	<img src="images/portfolio/anya.jpg"alt="AnyaBot">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
@@ -450,7 +450,7 @@
 	            <div id="modal-01" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-projectjim.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -473,7 +473,7 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-shutterbug.jpg" alt="" />
+				     		<img src="images/portfolio/modals/m-jobhunter.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
