--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>JULIAN MANAOIS</title>
+	<title>Julian Manaois</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -26,9 +26,8 @@
 	<script src="./js/modernizr.js"></script>
 	<script src="./js/pace.min.js"></script>
 
-   <!-- favicons
-	================================================== -->
-	<link rel="icon" type="image/png" href="favicon.png">
+
+
 
 </head>
 
