--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<title>Julian Manaois</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
+	<link rel="icon" type="image/x-icon" href="/images/Jmanaois.ico">
 
    <!-- mobile specific
    ================================================== -->
