--- a/jobhunter.html
+++ b/jobhunter.html
@@ -20,7 +20,7 @@
 
     <!-- favicons
     ================================================== -->
-
+    <link rel="icon" type="image/x-icon" href="/images/Jmanaois.ico">
 </head>
 
 <body id="top">
