--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
 				   <div id="modal-02" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-jobhunter.png" alt="" />
+				     		<img src="images/portfolio/jobhunter.png" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
@@ -495,7 +495,7 @@
 				   <div id="modal-03" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-anya.jpg" alt="" />
+				     		<img src="images/portfolio/anya.jpg" alt="" />
 				     	</div>      	
 
 					   <div class="description-box">
